test_programs/compile_failure/constrain_typo/src/main.nr

// This should not compile as the keyword 
// is `constrain` and not `constrai`

fn main(x : field, y : field) {
    constrai x != y;
}
